--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,4 +1,4 @@
 server.port=8005
 configuracion.texto=Configurando ambiente Desarrollo.
-configuracion.autor.nombre=Gratiniano
+configuracion.autor.nombre=Gratiniano-Antonio
 configuracion.autor.email=gratiniano@gmail.com
