introducir información para github

--- a/servicio-items-prod.properties
+++ b/servicio-items-prod.properties
@@ -1,4 +1,4 @@
 server.port=8007
 configuracion.texto=Configurando ambiente Produccion.
-configuracion.autor.nombre=Gratiniano
+configuracion.autor.nombre=Gratiniano github
 configuracion.autor.email=gratiniano@gmail.com
